--- a/html_project/css/style.css
+++ b/html_project/css/style.css
@@ -1,3 +1,9 @@
+html {
+    width: 1920px;
+
+    overflow-x: hidden;
+}
+
 .nav {
     width: 1920px;
     height: 36px;
